# octo-rill

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  commitlint.config.cjs  lefthook.yml  package.json
.github/: quality-gates.json
docs/: README.md  architecture.md  product.md  repository-governance.md
docs-site/: .gitignore  package.json  rspress.config.ts
migrations/: 0001_init.sql  0002_ai_translations.sql  0003_reset_briefs_and_indexes.sql  0004_release_reactions.sql  0005_reaction_pat_tokens.sql  0006_user_admin_and_disable.sql  0007_job_center.sql  0008_llm_scheduler_observability.sql  0009_llm_calls_conversation_and_tokens.sql  0010_llm_calls_first_token_wait.sql  0011_llm_call_events.sql  0012_subscription_sync_scheduler.sql  0013_translation_scheduler.sql  0014_nanoid_primary_keys.sql  0015_translation_worker_board.sql  0016_llm_calls_admin_sort.sql  0016_translation_request_singletons.sql  0017_llm_calls_created_at_sort.sql  0018_llm_calls_filtered_sort_indexes.sql  0019_translation_request_singletons.sql  0020_runtime_leases.sql  0021_runtime_owners.sql  0022_admin_runtime_worker_settings.sql  0022_shared_repo_release_cache.sql  0024_translation_result_states.sql  0025_translation_request_dedupe.sql  0026_dashboard_social_activity.sql  0026_starred_repo_visuals.sql  0028_social_activity_event_dedupe.sql  0029_owned_repo_star_baseline_snapshot_state.sql  0030_owned_repo_visuals.sql  0031_social_activity_event_repo_visuals.sql  0032_repo_star_sync_baselines.sql  (+22 more)
src/: ai.rs  (+23 more)
(+596 files in other folders)
