[package]
name = "octo-rill"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
oauth2 = "5.0.0"
rand = "0.10.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
